# serverless-streaming-data-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
deployments/cdk/: constants.py  data_pipeline_stack.py  external_test_resources_stack.py  local_app.py
lambdas/kinesis_tinybird_loader/: kinesis_tinybird_loader.py
lambdas/test_logger/: test_logger.py
tests/integration/: fixtures.py
tests/integration/e2e/: test_pipeline.py
tests/integration/mocks/: tinybird_request_recorder.py
