[metadata]
name = serverless-streaming-data-pipeline
url = https://github.com/localstack/serverless-streaming-data-pipeline
version = 0.0.1
author = LocalStack Contributors
author_email = info@localstack.cloud
license = Proprietary
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
test_suite = tests
packages=find:

[options.packages.find]
exclude =
    tests
    lambdas
    deployments

[options.extras_require]
deploy =
    aws-cdk-lib==2.13.0
    constructs>=10.0.0,<11.0.0

# for running tests and coverage analysis
test =
    pytest==6.2.4
    requests
    boto3>=1.21
    http-server-mock>=1.7
    aws-cdk-lib

# for development
dev =
    black==22.3.0
    flake8>=3.6.0
    flake8-black==0.3.2
    flake8-isort>=4.0.0
    flake8-quotes>=0.11.0
    pre-commit==2.13.0
    pyproject-flake8
    isort==5.9.1
